@@ -48,7 +48,15 @@ td {
 --></style>
   </head>
   <body>
-<h1>Twiki Browser Content Renderer Test</h1><h1>Header 1</h1><h2>Header 2</h2><h3>Header 3</h3><h4>Header 4</h4><h5>Header 5</h5><h6>Header 6</h6><h6>Header 7</h6><p>
+<h1>Twiki Browser Content Renderer Test</h1>
+<h1>Header 1</h1>
+<h2>Header 2</h2>
+<h3>Header 3</h3>
+<h4>Header 4</h4>
+<h5>Header 5</h5>
+<h6>Header 6</h6>
+<h6>Header 7</h6>
+<p>
 </p>
 <p>
 <strong>bold</strong> <em>italic</em>  <strong><em>bold italic</em></strong> <code>fixed font</code> <code><b>bold fixed font</b></code></p>
@@ -95,5 +103,8 @@ Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard 
 Bug: [ 1487063 ] Some WikiWords not recognized: TipsJ2ME<a href="http://--wiki/TipsJ2ME">?</a> EclipseME<a href="http://--wiki/EclipseME">?</a> MyVPN<a href="http://--wiki/MyVPN">?</a> MeetingNotes2006x03x25<a href="http://--wiki/MeetingNotes2006x03x25">?</a> blah</p>
 <p>
 Bug: [ 1181020 ] Escape WikiWords such as WardsBrowserContentRendererTest TipsJ2ME MeetingNotes2006x03x25 TwikiBrowserContentRendererTest</p>
+<p>
+</p>
+<h3>Bug: [ 1490333 ] WikiWord in heading not recognized - <a href="http://--wiki/TwikiBrowserContentRendererTest">TwikiBrowserContentRendererTest</a></h3>
   </body>
 </html>
